<resources>
    <string name="app_name">APPescar</string>
    <string name="title_activity_maps">APPescar</string>
    <string name="location_permission_denied">location_permission_denied</string>
    <string name="permission_required_toast">permission_required_toast</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
    <string name="facebook_application_id" translatable="false">1124968610941049</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1124968610941049</string>

    <string name="navigation_drawer_open">Abrir Panel Lateral</string>
    <string name="navigation_drawer_close">Cerrar Panel Lateral</string>


    <string name="action_settings">Desloguearse</string>

    <string name="agregar_pesca">Agregar Pesca</string>
    <string name="descripcion">Descripción</string>
    <string name="tipopez_seleccionar">Tipo de Pez</string>
    <string name="tipolinea_seleccionar">Tipo de Linea</string>
    <string name="tipocarnada_seleccionar">Tipo de Carnada</string>
    <string name="tipoubicacion_seleccionar">Ubicación de Pesca</string>

    <string name="tipocarnada1">Viva</string>
    <string name="tipocarnada2">Masa</string>
    <string name="tipocarnada3">Mosca</string>
    <string name="tipocarnada4">Señuelo</string>

    <string name="tipolinea1">Fondo</string>
    <string name="tipolinea2">Flote</string>

    <string name="tipopez1">Armado</string>
    <string name="tipopez2">Bagre amarillo</string>
    <string name="tipopez3">Bagre blanco o moncholo</string>
    <string name="tipopez4">Boga</string>
    <string name="tipopez5">Cabeza amarga</string>
    <string name="tipopez6">Chafalote</string>
    <string name="tipopez7">Dientudo o bocacha</string>
    <string name="tipopez8">Dorado</string>
    <string name="tipopez9">Lisa</string>
    <string name="tipopez10">Manguruyú</string>
    <string name="tipopez11">Pacú</string>
    <string name="tipopez12">Palometa</string>
    <string name="tipopez13">Patí</string>
    <string name="tipopez14">Pejerrey</string>
    <string name="tipopez15">Perca</string>
    <string name="tipopez16">Pirá pitá o pico de pato</string>
    <string name="tipopez17">Piraña</string>
    <string name="tipopez18">Raya</string>
    <string name="tipopez19">Surubí</string>
    <string name="tipopez20">Tararira</string>
    <string name="tipopez21">Carpa</string>
    <string name="tipopez22">Sabalo</string>
    <string name="tipopez23">Mojarra</string>
    <string name="tipopez24">Mandubí</string>
    <string name="tipopez25">Manduba</string>
    <string name="tipopez26">Corvina</string>
    <string name="tipopez27">Anguila</string>
    <string name="tipopez28">Vieja del agua</string>
    <string name="tipopez29">Limon</string>
    <string name="tipopez30">Palo</string>
    <string name="tipopez31">Congrio</string>
    <string name="tipopez32">Pescadilla</string>
    <string name="tipopez33">Chucho</string>
    <string name="tipopez34">Brotola</string>
    <string name="title_activity_form_add2">FormAdd2</string>

    <string name="save_button">Agregar</string>
    <string name="select_image">Agregue una imagen del pez</string>
    <string name="pick_photo">Seleccione una imagen</string>
    <string name="pick_camera">Tome una imagen</string>

    <string name="carnada">Carnada: %s</string>
    <string name="linea">Linea: %s</string>
    <string name="detalle">Detalle: %s</string>
    <string name="title_activity_detalles_pesca">Informacion de la Pesca</string>
    <string name="title_activity_mis_pescas">MisPescasActivity</string>
    <string name="large_text">1</string>

    <string name="ubicacion">Ubicación</string>

</resources>
