<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/FormAddTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_pesca"
        android:textSize="10pt">
    </TextView>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipopez_seleccionar"
        />
    <Spinner
        android:id="@+id/FormAddTipoPez"
        android:layout_height="wrap_content"
        android:prompt="@string/tipopez_seleccionar"
        android:layout_width="fill_parent"
        android:entries="@array/tipopezlist">
    </Spinner>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipolinea_seleccionar"
        />
    <Spinner
        android:id="@+id/FormAddTipoLinea"
        android:layout_height="wrap_content"
        android:prompt="@string/tipolinea_seleccionar"
        android:layout_width="fill_parent"
        android:entries="@array/tipolinealist">
    </Spinner>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipocarnada_seleccionar"
        />
    <Spinner
        android:id="@+id/FormAddTipoCarnada"
        android:layout_height="wrap_content"
        android:prompt="@string/tipocarnada_seleccionar"
        android:layout_width="fill_parent"
        android:entries="@array/tipocarnadalist">
    </Spinner>

    <EditText
        android:id="@+id/FormAddDescripcion"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine"
        android:lines="3"
        android:layout_width="fill_parent">
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        />
    <ImageView
        android:id="@+id/imageUploadPreview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        </ImageView>
    <Button
        android:id="@+id/uploadImageButton"
        android:text="@string/pick_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    </Button>

    <Button
        android:id="@+id/FormAddSaveButton"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/save_button"
        ></Button>

</LinearLayout>